2002/04/09  Nick Drochak <ndrochak@gol.com>

	* String.cs (Substring): Copy only non-null characters to the new
	string.

2002-04-09  Nick Drochak  <ndrochak@gol.com>

	* IntegerFormatter.cs: Don't use a format character to indicate a
	custom format was passed in. It was using 'z' to indicate a custom
	format, but really it should throw a format exception if the user
	tries to use "z" as the format string. Now it does.

	* Activator.cs: New File.

2002-04-08  Nick Drochak  <ndrochak@gol.com>

	* Enum.cs (ToString): Big ugly fix for the case where [Flags] is
	applied to an enum. Need to handle the different possible integer
	types of an enum somehow.  Can anyone say generics?

Mon Apr  8 06:22:42  2002 Piers Haken <piersh@friskit.com>

	* Convert.cs: switched the To*(object) methods to use
	IConvertible directly instead of calling ChangeType

Sat Apr 6 20:08:41 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ValueType.cs: make Equals() an internalcall.

Fri Apr 5 15:38:54 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Type.cs: also look for nested types in FindMembers.
	* MonoType.cs: make GetNestedTypes() an internalcall.

2002-04-05  Nick Drochak  <ndrochak@gol.com>

	* Enum.cs (Parse): Handle different underlying types.

2002/04/04 Nick Drochak <ndrochak@gol.com>

	* Enum.cs (IsDefined): Throw exception when type of value to look for
	is not the correct one.  Attempt to have it work with string values
	too, but not sure if the unit tests are getting that far yet.

2002-04-04  Nick Drochak  <ndrochak@gol.com>

	* Decimal.cs: Fix a couple of typos.

Wed Apr 3 19:46:00 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Enum.cs: the values array is of the enum and not of the underlying
	type. Updates and some bug fixes.
	* MonoType.cs: make the internalcall return FullName instead of the
	assembly qualified name.
	* Type.cs: make ToString () simply return FullName.

2002-04-03  Nick Drochak  <ndrochak@gol.com>
